--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask==3.1.0
-
 requests~=2.32.3
 python-dateutil~=2.9.0.post0
-bs4~=0.0.2
-beautifulsoup4~=4.12.3
+xmltodict==0.14.2
+black==25.1.0
