--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,4 +14,6 @@ jobs:
         with:
           python-version: '3.13'
       - run: pip install black
+      - run: black --version
       - run: black --check .
+
