moved env var to tox

--- a/django_weather_tracker/tox.ini
+++ b/django_weather_tracker/tox.ini
@@ -11,68 +11,6 @@ deps =
 setenv =
     DJANGO_SETTINGS_MODULE = mysite.settings
     PYTHONPATH = {toxinidir}
+    DATABASE_URL = sqlite:///test_db.sqlite3
+
 commands = pytest --cov=weather_tracker --cov-report=term-missing --cov-report=xml
-
-
-
-;[tox]
-;envlist = py313
-;
-;[testenv]
-;# Install test dependencies
-;deps =
-;    pytest
-;    pytest-cov
-;    coverage[toml]
-;
-;# Run tests with coverage
-;commands =
-;    pytest --cov=your_package_name --cov-report=term-missing --cov-report=html --cov-report=xml {posargs}
-;
-;[testenv:coverage]
-;# Dedicated environment for just coverage reporting
-;deps =
-;    {[testenv]deps}
-;commands =
-;    pytest --cov=your_package_name --cov-report=term-missing --cov-report=html --cov-branch
-;    coverage report --fail-under=80
-;
-;[testenv:lint]
-;# Optional: Add linting environment
-;deps =
-;    flake8
-;    black
-;    isort
-;commands =
-;    flake8 your_package_name tests
-;    black --check your_package_name tests
-;    isort --check-only your_package_name tests
-;
-;[pytest]
-;# Pytest configuration
-;testpaths = tests
-;python_files = test_*.py
-;python_classes = Test*
-;python_functions = test_*
-;addopts =
-;    -v
-;    --strict-markers
-;    --tb=short
-;
-;[coverage:run]
-;# Coverage configuration
-;source = your_package_name
-;omit =
-;    */tests/*
-;    */test_*.py
-;    */__pycache__/*
-;    */site-packages/*
-;
-;[coverage:report]
-;# Coverage reporting options
-;precision = 2
-;show_missing = True
-;skip_covered = False
-;
-;[coverage:html]
-;directory = htmlcov
